@@ -228,12 +228,6 @@ class Loss:
                     self.append_functional_error('bad_indemnification_shares', {
                             'service': self.rec_name,
                             'total_share': str(int(total_share * 100))})
-                else:
-                    self.raise_user_warning('bad_indemnification_shares_%s'
-                        % str(self.id), 'bad_indemnification_shares', {
-                            'service': self.rec_name,
-                            'total_share': str(int(total_share * 100))}
-                        )
 
     @classmethod
     def activate(cls, losses):
